--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<div class="row">
 					<div class="col-md-12 text-left page-title">
 						<h1>Marina Avelar</h1>
+						<p class="subsubtitle">Education Policy Researcher</p>
 					</div>
 				</div>
 		</div>
@@ -36,14 +37,14 @@
 			      <li class="nav-item">
 			        <a class="nav-link disabled" href="#Presentations">Presentations</a>
 			      </li>
-			      <li class="nav-item">
+			     <!--  <li class="nav-item">
 			        <a class="nav-link disabled" href="#">Contact</a>
-			      </li>
+			      </li> -->
 			    </ul>
 	  		</div>
 	  		</div>
 		</nav>
-		<img class="img-width" src="img/img3.jpg">
+		<img class="img-width" src="img/img4.png">
 <!-- 		<section >
 			<div class="row">
 				<div class="col-md-8 text-left">
@@ -76,19 +77,17 @@
 							Education </p>
 					</div>
 					<div class="col-md-10">
-						<P class="title-p list">PhD	UCL Institute of Education, University of London</P>
-						<p class="title-s list">PhD in Education</p>
+						<P class="title-p list">PhD in Education</P>
+						<p class="title-s list">UCL Institute of Education, University of London</p>
 						<p class="title-s list">Supervisor: Stephen J. Ball</p>
 						<br><br>
-						<p class="title-p list">M.A.	State University of Campinas (UNICAMP), Brazil</p>
-						<p class="title-s list">Master of Education, Education Policy</p>
-						<p class="title-s list">Institute of Education – University of London</p>
-						<p class="title-s list">Special Research Student</p>
+						<p class="title-p list">M.A. in Education, Education Policy</p>
+						<p class="title-s list">State University of Campinas (UNICAMP), Brazil</p>
+						<p class="title-s list">Institute of Education – University of London (Special Research Student)</p>
 						<br><br>
-						<p class="title-p list">B.A.	State University of Campinas (UNICAMP), Brazil
-							BA in Education – Pedagogy
-							Lund University, Sweden
-							Study abroad program, Erasmus Mundus</p>
+						<p class="title-p list">B.A. in Education – Pedagogy</p>
+						<p class="title-s list">State University of Campinas (UNICAMP), Brazil</p>
+						<p class="title-s list">Lund University, Sweden (Erasmus Mundus mobility scholarship)</p>
 					</div>
 				</div>	
 			</div>		
@@ -112,7 +111,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-2">
-						<p class="subsubtitle">Book Chapter</p>
+						<p class="subsubtitle">Book Chapters</p>
 					</div>
 					<div class="col-md-10">
 						<p>Avelar, M; Nikita, D.N; and Ball, S.J. (2017) Global education policy networks and spaces of ‘meetingness’. Handbook of Global Education Policy. John Wiley & Sons.</p>
@@ -149,6 +148,14 @@
 					</div>
 					<div class="col-md-4">
 						<img src="img/presentation.jpg">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="socialmedia">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-right footing">
 					</div>
 				</div>
 			</div>
